# libnv-render2d

./: CMakeLists.txt
example/draw_quad/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  nv_render2d.c
lib/include/: nv_render2d.h  nv_render2d_shader.h  nv_render2d_types.h  nv_transform2d.h
lib/include/glad/: glad.h
